ISIS-1841 automated source cleanup
Add missing '@Override' annotations
Remove trailing white spaces on all lines
Correct indentation